add traceability DID method & QR-code access to the DID result on Polyscan
